packages/ui-default/pages/record_detail.page.styl
.page--record_detail

  .compiler-text
    padding: rem(20px 0)
    font-size: rem($font-size-small)
    &:empty
      display: none

  .compiler-text-mask
    display: none

  .col--case
    width: rem(70px)

  .col--memory, .col--time
    width: rem(120px)

  .col--case, .col--status
    border-right: 1px solid $table-border-color
  
  .subtask
    background-color: #fff !important
    height: rem(30px)
    td
      padding-top: 0 
      padding-bottom: 0 

  +mobile()
    .col--time
      width: rem(70px)

    .col--memory
      width: rem(100px)

// dont hide compiler text if compile error
.hasjs .collapsed #status:not([data-status="7"])
  .compiler-text
    max-height: rem(250px)
    overflow: hidden
    position: relative

  .compiler-text-mask, .compiler-text-mask p
    display: block
    position: absolute
    cursor: pointer
    bottom: 0
    left: 0
    right: 0
    z-index: 1

  .compiler-text-mask
    height: rem(50px)
    background-image: linear-gradient(to bottom, transparent, #ffffff 25px)
    p
      text-align: center

